--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,10 +7,16 @@
 	box-sizing: border-box;
 }
 
+html{
+	padding: 0;
+	margin: 0;
+}
+
 body{
 	background: white;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
+	min-width: 320px;
 	margin: 0;
 	padding: 0;
 }
@@ -18,4 +24,229 @@ body{
 .container{
 	max-width: 1000px;
 	padding: 0 10px;
+	margin: auto;
+
+	&--border-blue{
+		border: 1px solid #11c6f3;
+		border-radius: 10px;
+	}
 }
+
+.header {
+	background: #051e6e;
+	color: white;
+	padding-top: 1px;
+	padding-bottom: 10px;
+
+	&__tel, &__address {
+		display: block;
+		color: white;
+		text-decoration: none;
+		font-weight: bold;
+		transition: 0.2s;
+
+		&:hover{
+			opacity: 0.6;
+		}
+	}
+
+
+	&__title{
+		margin: 10px 0 0 0;
+	}
+
+	&__nav-menu{
+		background: rgb(1, 99, 129);
+		width: 100%;
+		border-radius: 5px;
+		padding: 0 5px;
+		margin: 10px 0;
+	}
+
+	&__contact{
+		width: 100%;
+		justify-content: space-around;
+	}
+}
+
+.flex-menu {
+	display: flex;
+
+	&--column{
+		flex-direction: column;
+	}
+
+	&--center{
+		align-items: center;
+	}
+}
+
+
+.nav-list {
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 30px;
+	padding: 10px 0;
+
+	&__item {
+		text-align: center;
+		width: 20%;
+	}
+
+	&__link {
+		color: white;
+		text-decoration: none;
+		display: block;
+		padding: 10px;
+		background: rgb(212, 86, 92);
+		border-radius: 8px;
+		transition: 0.3s;
+
+		&:hover{
+			transform: scale(1.05);
+			opacity: 0.8;
+		}
+	}
+}
+.main {
+	min-height: 100vh;
+	margin-bottom: 20px;
+}
+
+.section{
+	padding-bottom: 20px;
+
+	&__content{
+		padding: 5px;
+	}
+}
+
+.services {
+	padding-top: 1px;
+	background: rgb(224, 218, 218);
+
+
+	&__item-title {
+		font-weight: bold;
+		font-size: 16px;
+		padding: 0;
+		margin: 10px 0 80px 0;
+	}
+
+	&__container {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__item {
+		position: relative;
+		text-align: center;
+		max-height: 300px;
+		width: 280px;
+		background: white;
+		border-radius: 5px;
+		border: 1px solid orange;
+	}
+
+	&__item-img {
+		width: 100%;
+		height: 150px;
+		border-radius: 5px 5px 0 0;
+	}
+
+	&__footer {
+		padding: 0 5px;
+	}
+
+	&__link {
+		position: absolute;
+		display: inline-block;
+		text-align: center;
+		border: 1px solid rgb(17, 198, 243);
+		padding: 5px 20px;
+		transition: 0.3s;
+
+		bottom: 10px;
+		left:50%;
+		transform:translate(-50%, -50%);
+		&:hover{
+			background: rgb(17, 198, 243);
+			border-radius: 5px;
+		}
+	}
+
+}
+.title {
+	position: relative;
+	font-weight: bold;
+	font-size: 36px;
+	text-align: center;
+
+	&::after{
+		content: "";
+		position: absolute;
+		background: red;
+		width: 100%;
+		height: 2px;
+		top: 45px;
+		left: 0;
+	}
+}
+
+.map{
+}
+
+.footer {
+	border-top: 1px solid #000;
+	padding: 20px 0;
+
+	&__flex-menu {
+		justify-content: space-around;
+	}
+
+	&__contact {
+		font-size: 24px;
+		font-weight: bold;
+	}
+
+	&__address {
+		
+	}
+
+	&__tel {
+	}
+
+	&__contact-container{
+		border: 1px solid #11c6f3;
+		padding: 10px;
+		align-self: center;
+	}
+}
+
+.social-list {
+	list-style: none;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+
+	&__item {
+		margin-right: 10px;
+
+		&:last-child{
+			margin-right: 0px;
+		}
+	}
+
+	&__link {
+		display: inline-block;
+
+		& img{
+			width: 50px;
+			height: px;
+		}
+	}
+}
+
+
