--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,18 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
 
 
-*, *:before, *:after {
-	-webkit-box-sizing: border-box; 
-	-moz-box-sizing: border-box; 
+*,
+*:before,
+*:after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-html{
+html {
 	padding: 0;
 	margin: 0;
 }
 
-body{
+
+
+body {
 	background: white;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
@@ -21,62 +25,100 @@ body{
 	padding: 0;
 }
 
-.container{
+.container {
 	max-width: 1000px;
 	padding: 0 10px;
 	margin: auto;
 
-	&--border-blue{
+	&--border-blue {
 		border: 1px solid #11c6f3;
 		border-radius: 10px;
 	}
 }
 
 .header {
-	background: #051e6e;
+	background: #051e6e url("../assets/img/backgound-header-resize.jpg") no-repeat center 35%;
+	background-size: cover;
 	color: white;
 	padding-top: 1px;
-	padding-bottom: 10px;
 
-	&__tel, &__address {
+	&__parktronics {
+		background: #051e6e url("../assets/img/partronics-slim.jpg") no-repeat center 35%;
+		background-size: cover;
+	}
+
+	&__tel,
+	&__address {
 		display: block;
 		color: white;
 		text-decoration: none;
 		font-weight: bold;
 		transition: 0.2s;
+		text-align: center;
 
-		&:hover{
+		&:hover {
 			opacity: 0.6;
 		}
 	}
 
 
-	&__title{
+	&__title {
 		margin: 10px 0 0 0;
 	}
 
-	&__nav-menu{
-		background: rgb(1, 99, 129);
+	&__nav-menu {
+		background: rgba(0, 0, 0, 0.5);
 		width: 100%;
 		border-radius: 5px;
 		padding: 0 5px;
 		margin: 10px 0;
 	}
 
-	&__contact{
+	&__contact {
 		width: 100%;
 		justify-content: space-around;
+	}
+
+	&__brightness {
+		background: rgba(0, 0, 0, 0.5);
+		padding-bottom: 10px;
+	}
+
+
+	@media(max-width:760px) {
+		& {
+			background-image: url(../assets/img/backgound-header.jpg);
+			background-position: center;
+			background-size: cover;
+		}
+
+		&__parktronics {
+			background-image: url(../assets/img/patronics.jpg);
+		}
+	}
+
+	@media(max-width:450px) {
+		&__contact {
+			flex-direction: column;
+			justify-content: center;
+		}
+
+		&__tel,
+		&__address {
+			text-align: center;
+			margin-bottom: 10px;
+		}
 	}
 }
 
 .flex-menu {
 	display: flex;
 
-	&--column{
+	&--column {
 		flex-direction: column;
 	}
 
-	&--center{
+	&--center {
 		align-items: center;
 	}
 }
@@ -100,32 +142,77 @@ body{
 		text-decoration: none;
 		display: block;
 		padding: 10px;
-		background: rgb(212, 86, 92);
+		background: rgba(250, 0, 0, 0.692);
 		border-radius: 8px;
 		transition: 0.3s;
 
-		&:hover{
+		&:hover {
 			transform: scale(1.05);
 			opacity: 0.8;
 		}
 	}
+
+	&__active {
+		background: gray;
+	}
+
+	@media (max-width: 540px) {
+		& {
+			flex-direction: column;
+			justify-content: center;
+		}
+
+		&__item {
+			width: 80%;
+			margin: 5px 0;
+		}
+	}
 }
+
 .main {
 	min-height: 100vh;
 	margin-bottom: 20px;
 }
 
-.section{
+.section {
 	padding-bottom: 20px;
 
-	&__content{
-		padding: 5px;
+	&--dark-grey{
+		background: rgb(49, 49, 49);
 	}
+
+	&--white-text{
+		color: white;
+	}
+
+	&__content {
+		padding: 15px;
+		line-height: 24px;
+		font-size: 20px;
+	}
+
+	&__img-div{
+		text-align: center;
+	}
+
+	&__img{
+		width: 400px;
+
+		@media (max-width:430px) {
+			&{
+				width: 270px;
+			}
+		}
+	}
+
+	&__benefits {}
+
+
 }
 
 .services {
 	padding-top: 1px;
-	background: rgb(224, 218, 218);
+	background: rgb(49, 49, 49);
 
 
 	&__item-title {
@@ -140,6 +227,7 @@ body{
 		justify-content: space-between;
 	}
 
+
 	&__item {
 		position: relative;
 		text-align: center;
@@ -147,7 +235,6 @@ body{
 		width: 280px;
 		background: white;
 		border-radius: 5px;
-		border: 1px solid orange;
 	}
 
 	&__item-img {
@@ -164,27 +251,69 @@ body{
 		position: absolute;
 		display: inline-block;
 		text-align: center;
+		text-decoration: none;
+		color: black;
 		border: 1px solid rgb(17, 198, 243);
 		padding: 5px 20px;
 		transition: 0.3s;
 
 		bottom: 10px;
-		left:50%;
-		transform:translate(-50%, -50%);
-		&:hover{
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		&:hover {
 			background: rgb(17, 198, 243);
 			border-radius: 5px;
 		}
 	}
 
+	@media (max-width: 900px) {
+		&__item {
+			width: 250px;
+		}
+	}
+
+	@media (max-width: 784px) {
+		&__item {
+			width: 500px;
+			margin-bottom: 20px;
+		}
+
+		&__item-img {
+			height: 200px;
+		}
+
+		&__container {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
+	@media (max-width: 515px) {
+		&__item {
+			width: 320px;
+			margin-bottom: 20px;
+		}
+
+		&__item-img {
+			height: 150px;
+		}
+
+		&__container {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
 }
+
 .title {
 	position: relative;
 	font-weight: bold;
 	font-size: 36px;
 	text-align: center;
 
-	&::after{
+	&::after {
 		content: "";
 		position: absolute;
 		background: red;
@@ -193,10 +322,13 @@ body{
 		top: 45px;
 		left: 0;
 	}
+
+	&--white{
+		color: white;
+	}
 }
 
-.map{
-}
+.map {}
 
 .footer {
 	border-top: 1px solid #000;
@@ -211,17 +343,26 @@ body{
 		font-weight: bold;
 	}
 
-	&__address {
-		
-	}
+	&__address {}
 
-	&__tel {
-	}
+	&__tel {}
 
-	&__contact-container{
+	&__contact-container {
 		border: 1px solid #11c6f3;
 		padding: 10px;
 		align-self: center;
+	}
+
+	@media (max-width:640px) {
+		&__flex-menu {
+			justify-content: start;
+			align-items: center;
+			flex-direction: column;
+		}
+
+		.map {
+			margin-bottom: 30px;
+		}
 	}
 }
 
@@ -234,7 +375,7 @@ body{
 	&__item {
 		margin-right: 10px;
 
-		&:last-child{
+		&:last-child {
 			margin-right: 0px;
 		}
 	}
@@ -242,11 +383,192 @@ body{
 	&__link {
 		display: inline-block;
 
-		& img{
+		& img {
 			width: 50px;
-			height: px;
+			height: 50px;
 		}
 	}
 }
+
+
+.benefits {
+
+	display: flex;
+	justify-content: space-between;
+
+	&__item {
+		padding: 8px;
+		width: 280px;
+		text-align: center;
+		background-color: rgb(80, 76, 76);
+	}
+
+	&__title {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-weight: bold;
+	}
+
+	&__img {
+		width: 40px;
+		height: 40px;
+		margin-right: 3px;
+	}
+
+	&__text {}
+
+	@media (max-width:910px) {
+		&__item {
+			width: 230px;
+		}
+	}
+
+	@media (max-width:784px) {
+		&__item {
+			width: 500px;
+			margin: 10px 0;
+		}
+
+		& {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
+	@media (max-width:540px) {
+		&__item {
+			width: 300px;
+			margin: 10px 0;
+		}
+
+		& {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
+	@media (max-width:350px) {
+		&__item {
+			width: 270px;
+			margin: 10px 0;
+		}
+	}
+}
+
+.youtube-content {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+
+	&__item {
+		margin-right: 20px;
+
+		&:last-child {
+			margin-right: 0px;
+		}
+	}
+
+	@media (max-width:716px) {
+		&__item {
+			margin: 10px 0;
+		}
+
+		& {
+			flex-direction: column;
+		}
+	}
+}
+
+
+.iframe-youtube {
+	width: 400px;
+	height: 200px;
+
+	@media(max-width:874px) {
+		& {
+			width: 600px;
+			height: 300px;
+			margin-bottom: 10px;
+		}
+	}
+
+	@media(max-width:650px) {
+		& {
+			width: 400px;
+		}
+	}
+
+	@media(max-width:650px) {
+		& {
+			width: 300px;
+		}
+	}
+
+	@media(max-width:350px) {
+		& {
+			width: 270px;
+		}
+	}
+}
+
+.table-products {
+
+	margin: 0 auto;
+	width: 100%;
+	border-collapse: collapse;
+
+	& tbody{
+		width: 100%;
+	}
+
+	&__tr {
+		border-bottom: 1px solid black;
+	}
+
+	&__th {}
+
+	&__td {
+		text-align: center;
+	}
+
+	&__img {
+		width: 100px;
+		height: 100px;
+	}
+
+	&__post-scriptum{
+		margin: 10px 0;
+		color: rgba(95, 95, 95, 0.5);
+		font-size: 12px;
+	}
+
+	@media (max-width:400px) {
+		&{
+			font-size: 16px;
+		}
+		&__img{
+			width: 70px;
+			height: 70px;
+		}
+	}
+}
+
+.list-img {
+
+	&__item {
+		margin-bottom: 30px;
+	}
+
+	&__img{
+		width: 300px;
+
+		@media (max-width:400px) {
+			width: 230px;
+		}
+	}
+}
+
 
 
