--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ body {
   padding: 0 10px;
   margin: auto;
 }
-.container--border-blue {
-  border: 1px solid #11c6f3;
+.container--light-red-bg {
+  background: rgba(253, 108, 11, 0.164);
   border-radius: 10px;
 }
 
@@ -378,12 +378,24 @@ body {
 .youtube-content__item:last-child {
   margin-right: 0px;
 }
-@media (max-width: 716px) {
+.youtube-content__video {
+  width: 300px;
+  height: 200px;
+}
+@media (max-width: 720px) {
   .youtube-content__item {
     margin: 10px 0;
   }
+  .youtube-content__video {
+    width: 450px;
+  }
   .youtube-content {
     flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .youtube-content__video {
+    width: 280px;
   }
 }
 
@@ -457,4 +469,11 @@ body {
   .list-img__img {
     width: 230px;
   }
+}
+
+.site-map {
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-align: center;
 }
