--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,139 +34,7 @@ body {
 		background: rgba(253, 108, 11, 0.164);
 		border-radius: 10px;
 	}
-}
-
-.header {
-	background: #051e6e url("../assets/img/backgound-header-resize.jpg") no-repeat center 35%;
-	background-size: cover;
-	color: white;
-	padding-top: 1px;
-
-	&__parktronics {
-		background: #051e6e url("../assets/img/partronics-slim.jpg") no-repeat center 35%;
-		background-size: cover;
-	}
-
-	&__tel,
-	&__address {
-		display: block;
-		color: white;
-		text-decoration: none;
-		font-weight: bold;
-		transition: 0.2s;
-		text-align: center;
-
-		&:hover {
-			opacity: 0.6;
-		}
-	}
-
-
-	&__title {
-		margin: 10px 0 0 0;
-	}
-
-	&__nav-menu {
-		background: rgba(0, 0, 0, 0.5);
-		width: 100%;
-		border-radius: 5px;
-		padding: 0 5px;
-		margin: 10px 0;
-	}
-
-	&__contact {
-		width: 100%;
-		justify-content: space-around;
-	}
-
-	&__brightness {
-		background: rgba(0, 0, 0, 0.5);
-		padding-bottom: 10px;
-	}
-
-
-	@media(max-width:760px) {
-		& {
-			background-image: url(../assets/img/backgound-header.jpg);
-			background-position: center;
-			background-size: cover;
-		}
-
-		&__parktronics {
-			background-image: url(../assets/img/patronics.jpg);
-		}
-	}
-
-	@media(max-width:450px) {
-		&__contact {
-			flex-direction: column;
-			justify-content: center;
-		}
-
-		&__tel,
-		&__address {
-			text-align: center;
-			margin-bottom: 10px;
-		}
-	}
-}
-
-.flex-menu {
-	display: flex;
-
-	&--column {
-		flex-direction: column;
-	}
-
-	&--center {
-		align-items: center;
-	}
-}
-
-
-.nav-list {
-	list-style: none;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 0 30px;
-	padding: 10px 0;
-
-	&__item {
-		text-align: center;
-		width: 20%;
-	}
-
-	&__link {
-		color: white;
-		text-decoration: none;
-		display: block;
-		padding: 10px;
-		background: rgba(250, 0, 0, 0.692);
-		border-radius: 8px;
-		transition: 0.3s;
-
-		&:hover {
-			transform: scale(1.05);
-			opacity: 0.8;
-		}
-	}
-
-	&__active {
-		background: gray;
-	}
-
-	@media (max-width: 540px) {
-		& {
-			flex-direction: column;
-			justify-content: center;
-		}
-
-		&__item {
-			width: 80%;
-			margin: 5px 0;
-		}
-	}
+	z-index: 2;
 }
 
 .main {
@@ -174,421 +42,20 @@ body {
 	margin-bottom: 20px;
 }
 
-.section {
-	padding-bottom: 20px;
-
-	&--dark-grey {
-		background: rgb(49, 49, 49);
-	}
-
-	&--white-text {
-		color: white;
-	}
-
-	&__content {
-		padding: 15px;
-		line-height: 24px;
-		font-size: 20px;
-	}
-
-	&__img-div {
-		text-align: center;
-	}
-
-	&__img {
-		width: 400px;
-
-		@media (max-width:430px) {
-			& {
-				width: 270px;
-			}
-		}
-	}
-
-	&__benefits {}
-
-
-}
-
-.services {
-	padding-top: 1px;
-	background: rgb(49, 49, 49);
-
-
-	&__item-title {
-		font-weight: bold;
-		font-size: 16px;
-		padding: 0;
-		margin: 10px 0 80px 0;
-	}
-
-	&__container {
-		display: flex;
-		justify-content: space-between;
-	}
-
-
-	&__item {
-		position: relative;
-		text-align: center;
-		max-height: 300px;
-		width: 280px;
-		background: white;
-		border-radius: 5px;
-	}
-
-	&__item-img {
-		width: 100%;
-		height: 150px;
-		border-radius: 5px 5px 0 0;
-	}
-
-	&__footer {
-		padding: 0 5px;
-	}
-
-	&__link {
-		position: absolute;
-		display: inline-block;
-		text-align: center;
-		text-decoration: none;
-		color: black;
-		border: 1px solid rgb(17, 198, 243);
-		padding: 5px 20px;
-		transition: 0.3s;
-
-		bottom: 10px;
-		left: 50%;
-		transform: translate(-50%, -50%);
-
-		&:hover {
-			background: rgb(17, 198, 243);
-			border-radius: 5px;
-		}
-	}
-
-	@media (max-width: 900px) {
-		&__item {
-			width: 250px;
-		}
-	}
-
-	@media (max-width: 784px) {
-		&__item {
-			width: 500px;
-			margin-bottom: 20px;
-		}
-
-		&__item-img {
-			height: 200px;
-		}
-
-		&__container {
-			flex-direction: column;
-			align-items: center;
-		}
-	}
-
-	@media (max-width: 515px) {
-		&__item {
-			width: 320px;
-			margin-bottom: 20px;
-		}
-
-		&__item-img {
-			height: 150px;
-		}
-
-		&__container {
-			flex-direction: column;
-			align-items: center;
-		}
-	}
-
-}
-
-.title {
-	position: relative;
-	font-weight: bold;
-	font-size: 36px;
-	text-align: center;
-
-	&::after {
-		content: "";
-		position: absolute;
-		background: red;
-		width: 100%;
-		height: 2px;
-		top: 45px;
-		left: 0;
-	}
-
-	&--white {
-		color: white;
-	}
-}
-
 .map {}
 
-.footer {
-	border-top: 1px solid #000;
-	padding: 20px 0;
 
-	&__flex-menu {
-		justify-content: space-around;
-	}
-
-	&__contact {
-		font-size: 24px;
-		font-weight: bold;
-	}
-
-	&__address {}
-
-	&__tel {}
-
-	&__contact-container {
-		border: 1px solid #11c6f3;
-		padding: 10px;
-		align-self: center;
-	}
-
-	@media (max-width:640px) {
-		&__flex-menu {
-			justify-content: start;
-			align-items: center;
-			flex-direction: column;
-		}
-
-		.map {
-			margin-bottom: 30px;
-		}
-	}
-}
-
-.social-list {
-	list-style: none;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-
-	&__item {
-		margin-right: 10px;
-
-		&:last-child {
-			margin-right: 0px;
-		}
-	}
-
-	&__link {
-		display: inline-block;
-
-		& img {
-			width: 50px;
-			height: 50px;
-		}
-	}
-}
-
-
-.benefits {
-
-	display: flex;
-	justify-content: space-between;
-
-	&__item {
-		padding: 8px;
-		width: 280px;
-		text-align: center;
-		background-color: rgb(80, 76, 76);
-	}
-
-	&__title {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-weight: bold;
-	}
-
-	&__img {
-		width: 40px;
-		height: 40px;
-		margin-right: 3px;
-	}
-
-	&__text {}
-
-	@media (max-width:910px) {
-		&__item {
-			width: 230px;
-		}
-	}
-
-	@media (max-width:784px) {
-		&__item {
-			width: 500px;
-			margin: 10px 0;
-		}
-
-		& {
-			flex-direction: column;
-			align-items: center;
-		}
-	}
-
-	@media (max-width:540px) {
-		&__item {
-			width: 300px;
-			margin: 10px 0;
-		}
-
-		& {
-			flex-direction: column;
-			align-items: center;
-		}
-	}
-
-	@media (max-width:350px) {
-		&__item {
-			width: 270px;
-			margin: 10px 0;
-		}
-	}
-}
-
-.youtube-content {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-
-	&__item {
-		margin-right: 20px;
-
-		&:last-child {
-			margin-right: 0px;
-		}
-	}
-
-	&__video {
-		width: 300px;
-		height: 200px;
-	}
-
-	@media (max-width:720px) {
-		&__item {
-			margin: 10px 0;
-		}
-
-		&__video {
-			width: 450px;
-		}
-
-		& {
-			flex-direction: column;
-		}
-	}
-
-	@media (max-width:500px) {
-		&__video {
-			width: 280px;
-		}
-	}
-}
-
-
-.iframe-youtube {
-	width: 400px;
-	height: 200px;
-
-	@media(max-width:874px) {
-		& {
-			width: 600px;
-			height: 300px;
-			margin-bottom: 10px;
-		}
-	}
-
-	@media(max-width:650px) {
-		& {
-			width: 400px;
-		}
-	}
-
-	@media(max-width:650px) {
-		& {
-			width: 300px;
-		}
-	}
-
-	@media(max-width:350px) {
-		& {
-			width: 270px;
-		}
-	}
-}
-
-.table-products {
-
-	margin: 0 auto;
-	width: 100%;
-	border-collapse: collapse;
-
-	& tbody {
-		width: 100%;
-	}
-
-	&__tr {
-		border-bottom: 1px solid black;
-	}
-
-	&__th {}
-
-	&__td {
-		text-align: center;
-	}
-
-	&__img {
-		width: 100px;
-		height: 100px;
-	}
-
-	&__post-scriptum {
-		margin: 10px 0;
-		color: rgba(95, 95, 95, 0.5);
-		font-size: 12px;
-	}
-
-	@media (max-width:400px) {
-		& {
-			font-size: 16px;
-		}
-
-		&__img {
-			width: 70px;
-			height: 70px;
-		}
-	}
-}
-
-.list-img {
-
-	&__item {
-		margin-bottom: 30px;
-	}
-
-	&__img {
-		width: 300px;
-
-		@media (max-width:400px) {
-			width: 230px;
-		}
-	}
-}
-
-.site-map {
-	display: block;
-	color: white;
-	text-decoration: none;
-	text-align: center;
-}
+@import "_nav-list.scss";
+@import "_benefits.scss";
+@import "_flex-menu.scss";
+@import "_footer.scss";
+@import "_header.scss";
+@import "_iframe-youtube.scss";
+@import "_list-img.scss";
+@import "_section.scss";
+@import "_services.scss";
+@import "_site-map.scss";
+@import "_social-list.scss";
+@import "_table-products.scss";
+@import "_title.scss";
+@import "_youtube-content.scss";
